--- a/React_Frontend/package.json
+++ b/React_Frontend/package.json
@@ -7,20 +7,32 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
+    "concurrently": "^5.3.0",
+    "cross-env": "^7.0.2",
+    "electron-builder": "^22.8.0",
+    "electron-is-dev": "^1.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "sweetalert2": "^9.17.2"
+    "sweetalert2": "^9.17.2",
+    "typescript": "^4.0.2",
+    "wait-on": "^5.2.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "react-start": "react-scripts start",
+    "react-build": "react-scripts build",
+    "react-test": "react-scripts test --env=jsdom",
+    "react-eject": "react-scripts eject",
+    "electron-build": "electron-builder",
+    "release": "yarn react-build && electron-builder --publish=always",
+    "build": "yarn react-build && yarn electron-build",
+    "start": "concurrently \"cross-env BROWSER=none npm run react-start\" \"wait-on http://localhost:3000 && electron .\""
   },
+ "main": "public/electron.js",
+ "homepage": "./",
   "eslintConfig": {
-    "extends": "react-app"
+  "extends": "react-app"
   },
   "browserslist": {
     "production": [
